Fix topbar on mobile

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -54,7 +54,7 @@ body {
     height: 30px;
   }
   .top-bar-link {
-    padding: 10px 25px;
+    padding: 10px 20px;
   }
 }
 
